# monte-carlo-options-simd

./: Cargo.toml  README.md  bench.sh  test.sh
benches/: benchmark.rs
src/: bs.rs  lib.rs  main.rs  mc.rs  mc32x8.rs  mc_simd.rs  mcfast.rs  rand32x8.rs
